--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 spring.flyway.baselineOnMigrate = true
+
+server.error.include-stacktrace = never
