--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,11 @@ spring.datasource.password=postgres
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.flyway.baselineOnMigrate = true
 
-server.error.include-stacktrace = never
+server.error.include-stacktrace =
+
+api.security.token.secret=${JWT_SECRET: da1fg87wqd82q48r298}
