feat and fix: documentation, tests and control validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/LANCHONETE
+spring.datasource.url=jdbc:postgresql://localhost:5432/LANCHONETE?currentSchema=public
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.properties.hibernate.default_schema=public
+
+
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
